# compass

./: .gitignore  .mcp.json  .pre-commit-config.yaml  BRAINSTORM.md  COLLECTORS.md  DECIDED.md  FINAL.md  FRONTEND.md  FRONTEND_v2.md  PIPELINE.md  SETUP.md  STRUCTURE.md  TESTING.md  VISIONS.md  compass  package.json  pyproject.toml
.claude/commands/: extract-rules.md
.github/workflows/: ci.yml
PROMPTS/: EXTRACTION_PROMPT.md  PROJECT_RULES.md  RECONCILIATION_PROMPT.md  REVIEW_PROMPT.md
PROMPTS/old_templates/: paula_pr_review.md
briefs/: adapters_providers.md  collectors.md  domain_models.md  foundation.md  prompts_quality.md  storage_cli.md
compass/: __init__.py  __main__.py  cli.py  config.py  errors.py  file_selector.py  language_detection.py  log.py  paths.py  prerequisites.py  repomix.py  runner.py  skeleton.py
compass/adapters/: base.py  orchestrator.py  rules.py  summary.py
compass/collectors/: ast_grep.py  base.py  docs_reader.py  git_log.py  (+2 more)
docs/: foundation-team-update.md  project-overview.md
domain/: analysis_context.py  architecture_snapshot.py  coupling_pair.py
examples/: analysis_context.json  rules.yaml  summary.md
research/: BUILD_ROADMAP.md  COMPETITIVE ANALYSIS.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_ANALYSIS_final.md  PIPELINE_COMPARISON_1.md  PROMPT_TEMPLATES.md  README_HUMANS.md  RESEARCH.md  SUMMARY_ADAPTER (brainstorm).md  UX_BRIEF.md  UX_BRIEF_final.md  UX_DECISIONS_NEEDED.md  UX_HOW_WE_GET_THERE.md  prompt_templates.md
scripts/: validate_commit_msg.py
stuart_pr_review/: compass_review.md
tests/: __init__.py  conftest.py
(+90 files in other folders)
